appId: com.raicesfrontend.app
env:
  TEST_EMAIL: oa1@example.com
---
- runFlow:
    file: ../flows/dev-login.yaml

# Go to settings tab
- tapOn: "Perfil"

# Ensure we are on the Privacy screen
- assertVisible: "Mi Privacidad"

# Disable activity
- scrollUntilVisible:
    element:
      id: "privacy-toggle-Compartir Actividad-on"
    direction: DOWN
- tapOn:
    id: "privacy-toggle-Compartir Actividad-on"

# Verify toggle switches to OFF state
- assertVisible:
    id: "privacy-toggle-Compartir Actividad-off"

# Disable health
- scrollUntilVisible:
    element:
      id: "privacy-toggle-Compartir Salud-on"
    direction: DOWN
- tapOn:
    id: "privacy-toggle-Compartir Salud-on"

# Verify toggle switches to OFF state
- assertVisible:
    id: "privacy-toggle-Compartir Salud-off"
